refined the code to be more optimized & made some timing tests in the playground

--- a/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/corey_schafer/automate_parsing_and_renaming_of_multiple_files/automate_parsing_and_renaming_of_multiple_files.ipynb
+++ b/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/corey_schafer/automate_parsing_and_renaming_of_multiple_files/automate_parsing_and_renaming_of_multiple_files.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597491560187",
+   "name": "python_defaultSpec_1597496565656",
    "display_name": "Python 3.8.5 64-bit"
   }
  },
@@ -64,6 +64,116 @@
     "os.chdir(os.path.dirname(os.getcwd()))\n",
     "print(\"the new working dir: \", os.getcwd())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.03249572000095213\n"
+    }
+   ],
+   "source": [
+    "my_setup = 'import os'\n",
+    "import timeit\n",
+    "my_code= '''\n",
+    "f_name_and_ext = os.path.splitext('hello.txt')\n",
+    "f_name = f_name_and_ext[0]\n",
+    "ext = f_name_and_ext[1]\n",
+    "'''\n",
+    "print(timeit.timeit(stmt=my_code, setup=my_setup, number=10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.08655028599969228\n"
+    }
+   ],
+   "source": [
+    "my_setup = 'import os'\n",
+    "import timeit\n",
+    "my_code ='''\n",
+    "f_name = os.path.splitext('hello.txt')[0]\n",
+    "ext = os.path.splitext('hello.txt')[1]\n",
+    "'''\n",
+    "print(timeit.timeit(stmt=my_code, setup=my_setup, number=10000))\n",
+    "# obviously this takes more time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "final average:  0.24864596376006376\n"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "my_code ='''\n",
+    "l = [1,2,3,4,5]\n",
+    "temp = l[2]\n",
+    "l[2] = l[0]\n",
+    "l[0] = temp\n",
+    "'''\n",
+    "sum = 0\n",
+    "for i in range(100):\n",
+    "    t = timeit.timeit(stmt=my_code, number=1000000)\n",
+    "    sum += t\n",
+    "print('final average: ', sum/100)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "final average:  0.3509611629799656\n"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "my_code ='''\n",
+    "l = [1,2,3,4,5]\n",
+    "three = l.pop(2)\n",
+    "l.insert(0, three)\n",
+    "'''\n",
+    "sum = 0\n",
+    "for i in range(100):\n",
+    "    t = timeit.timeit(stmt=my_code, number=1000000)\n",
+    "    sum += t\n",
+    "print('final average: ', sum/100)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
