renamed the file automatically using the script in the same dir

--- a/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/corey_schafer/automate_parsing_and_renaming_of_multiple_files/automate_parsing_and_renaming_of_multiple_files.ipynb
+++ b/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/corey_schafer/automate_parsing_and_renaming_of_multiple_files/automate_parsing_and_renaming_of_multiple_files.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597496565656",
+   "name": "python_defaultSpec_1597506828979",
    "display_name": "Python 3.8.5 64-bit"
   }
  },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -75,7 +75,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.03249572000095213\n"
+     "text": "0.05705433899856871\n"
     }
    ],
    "source": [
@@ -166,6 +166,96 @@
     "    t = timeit.timeit(stmt=my_code, number=1000000)\n",
     "    sum += t\n",
     "print('final average: ', sum/100)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "final average:  0.4305963511998561\n"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "my_setup = 'import os'\n",
+    "my_code = '''\n",
+    "def f():\n",
+    "    for f in os.listdir():\n",
+    "        f_name, f_ext = os.path.splitext(f)\n",
+    "    \n",
+    "        f_course, f_num, f_title, f_part = f_name.split('-')\n",
+    "    \n",
+    "        f_course = f_course.strip()\n",
+    "        f_num = f_num.strip().zfill(2)\n",
+    "        f_title = f_title.strip()\n",
+    "        f_part = f_part.strip()\n",
+    "    \n",
+    "        new_name = f\"{f_num}\" + (\" - {}\"*3).format(f_course, f_title, f_part) + f_ext\n",
+    "    \n",
+    "        yield new_name\n",
+    "f()        \n",
+    "'''\n",
+    "sum = 0\n",
+    "for i in range(100):\n",
+    "    t = timeit.timeit(stmt=my_code, number=1000000)\n",
+    "    sum += t\n",
+    "print('final average: ', sum/100)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "final average:  0.4139035618102207\n"
+    }
+   ],
+   "source": [
+    "my_code = '''\n",
+    "def rearrange():\n",
+    "    \"\"\"a functions that automates parsing and renaming filenames in a system\"\"\"\n",
+    "    for file in os.listdir():\n",
+    "        # splitting the extension\n",
+    "        f_name, f_ext = os.path.splitext(file)\n",
+    "\n",
+    "        # splitting the file name into parts\n",
+    "        f_name_parted = f_name.split('-')\n",
+    "\n",
+    "        # adding space in front of the course name\n",
+    "        f_name_parted[0] = ' ' + f_name_parted[0]\n",
+    "\n",
+    "        # moving number to the front with zfill and adding spaces\n",
+    "        number = f_name_parted[1]\n",
+    "        number = number.strip().zfill(2)\n",
+    "        number += ' '\n",
+    "        f_name_parted[1] = f_name_parted[0]\n",
+    "        f_name_parted[0] = number\n",
+    "        # x,y = y,x -> is a great way of swaping\n",
+    "\n",
+    "        # finally joining everything back together\n",
+    "        final_no_ext = '-'.join(f_name_parted)\n",
+    "        final_with_ext = final_no_ext + f_ext\n",
+    "        yield (final_with_ext)\n",
+    "rearrange()        \n",
+    "'''\n",
+    "my_setup = 'import os'        \n",
+    "sum = 0\n",
+    "for i in range(100):\n",
+    "    t = timeit.timeit(stmt=my_code, number=1000000)\n",
+    "    sum += t\n",
+    "print('final average: ', sum/100)  "
    ]
   },
   {
