added pytz, naive, and dt format

--- a/computer/software/tools/programming_languages/general_purpose/python/modules/date_related_modules/dates_times_timedeltas_and_timezones.ipynb
+++ b/computer/software/tools/programming_languages/general_purpose/python/modules/date_related_modules/dates_times_timedeltas_and_timezones.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597869535422",
+   "name": "python_defaultSpec_1597946924802",
    "display_name": "Python 3.8.5 64-bit"
   }
  },
@@ -385,24 +385,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-12-02 12:12:12+00:00\n"
+    }
+   ],
+   "source": [
+    "import pytz\n",
+    "import datetime\n",
+    "dtime = datetime.datetime(2020, 12, 2, 12, 12, 12, tzinfo=pytz.UTC) # the microseconds are left to default\n",
+    "print(dtime)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-08-20 18:10:22.561257+00:00\n2020-08-20 18:10:22.561351+00:00\n"
+    }
+   ],
+   "source": [
+    "dt_now = datetime.datetime.now(tz=pytz.UTC) # easier, less typing, easier to read (RECOMM|ENDED)\n",
+    "dt_utcnow = datetime.datetime.utcnow().replace(tzinfo=pytz.UTC)\n",
+    "print(dt_now)\n",
+    "print(dt_utcnow)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-08-20 20:10:22.561351+02:00\n"
+    }
+   ],
+   "source": [
+    "dt_cairo = dt_utcnow.astimezone(pytz.timezone('Africa/Cairo'))\n",
+    "print(dt_cairo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Africa/Cairo\n"
+    }
+   ],
+   "source": [
+    "for tz in pytz.all_timezones:\n",
+    "    if 'Cairo' in tz:\n",
+    "        print(tz)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-07-26 00:00:00\n"
+    }
+   ],
+   "source": [
+    "dt_str = 'July 26, 2020'\n",
+    "dt = datetime.datetime.strptime(dt_str, '%B %d, %Y')\n",
+    "print(dt)"
+   ]
   }
  ]
 }
